feat(item): add the fill and shape properties for md

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -312,6 +312,11 @@ button, a {
   flex: 1;
 }
 
+::slotted([slot="start"]),
+::slotted([slot="end"]) {
+  align-self: center;
+}
+
 
 // Item Input
 // --------------------------------------------------
