--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -292,3 +292,38 @@
 :host(.item-label-color) {
   --highlight-color-focused: #{current-color(base)};
 }
+
+// Material Design Item: Fill Solid
+// --------------------------------------------------
+
+:host(.item-fill-solid) {
+  @include border-radius(4px, 4px, 0, 0);
+
+  --background: #f5f5f5;
+
+  --border-width: 0 0 #{$item-md-border-bottom-width} 0;
+  --inner-border-width: 0;
+}
+
+:host(.item-fill-solid.item-shape-round) {
+  @include border-radius(16px, 16px, 0, 0);
+}
+
+// Material Design Item: Fill Outline
+// --------------------------------------------------
+
+:host(.item-fill-outline) {
+  overflow: visible;
+
+  --border-color: #9e9e9e;
+
+  --border-width: #{$item-md-border-bottom-width};
+}
+
+:host(.item-fill-outline) .item-native {
+  @include border-radius(4px);
+}
+
+:host(.item-fill-outline.item-shape-round) .item-native {
+  @include border-radius(28px);
+}
