Add shorthand events

--- a/core/src/components/popover/test/inline/index.html
+++ b/core/src/components/popover/test/inline/index.html
@@ -34,7 +34,7 @@
         popover.isOpen = true;
         popover.event = ev;
 
-        popover.addEventListener('ionPopoverDidDismiss', () => {
+        popover.addEventListener('didDismiss', () => {
           popover.isOpen = false;
           popover.event = undefined;
         });
