fix angular, core tests

--- a/core/src/components/popover/test/inline/index.html
+++ b/core/src/components/popover/test/inline/index.html
@@ -20,7 +20,7 @@
       <ion-content class="ion-padding">
         <ion-button onclick="openPopover(event)">Open Popover</ion-button>
 
-        <ion-popover is-open="true">
+        <ion-popover>
           <ion-content class="ion-padding">
             This is my inline popover content!
           </ion-content>
