--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -1,1 +1,43 @@
 @import "./datetime.scss";
+@import "../../themes/ionic.globals.md";
+
+:host {
+  width: 324px;
+
+  background: var(--ion-background-color);
+}
+
+// Header
+// -----------------------------------
+:host .datetime-title {
+  width: 100%;
+  height: 124px;
+
+  background: #ccc;
+}
+
+// Calendar/Time
+// -----------------------------------
+:host .datetime-calendar,
+:host .datetime-time {
+  width: 100%;
+  height: 328px;
+
+  background: #ddd;
+}
+
+// Footer
+// -----------------------------------
+:host .datetime-buttons {
+  @include padding(7px, 14px, 7px, 12px);
+
+  display: flex;
+
+  align-items: center;
+
+  justify-content: space-between;
+}
+
+:host .datetime-view-buttons ion-button {
+  color: $text-color-step-200;
+}
