--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -11,10 +11,20 @@
    * @prop --padding-start: Left padding if direction is left-to-right, and right padding if direction is right-to-left of the datetime
    *
    * @prop --placeholder-color: Color of the datetime placeholder
+   *
+   * @prop --background: The primary background of the datetime component.
+   * @prop --backdrop-secondary: The secondary background of the datetime component. This is the background of the header in the date picker and the dial and inputs in the time picker.
+   * @prop --background-active: The background of the active interactive components. This is the selected date in the date picker. In the time picker this is the active input and active AM/PM button.
+   * @prop --title-color: The text color of the title.
+   * @prop --color: The primary body text color.
+   * @prop --color-secondary: The color for the days of the week, next and previous buttons, and the AM/PM buttons.
+   * @prop --color-active: The text color of any active text. Applies to the "today" date in the calendar picker. In the time picker this applies to the active input and active AM/PM buttons.
+   * @prop --dial-color:  The color of the text that is selected by the dial in the time picker.
+   * @prop --dial-background: The background of the dial and arm in the time picker.
    */
-  @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
+  //@include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
 
-  display: flex;
+  /*display: flex;
   position: relative;
 
   min-width: $datetime-min-width;
@@ -27,7 +37,7 @@
   white-space: nowrap;
 
   overflow: hidden;
-  z-index: $z-index-item-input;
+  z-index: $z-index-item-input;*/
 }
 
 :host(.in-item) {
