--- a/core/src/components/datetime/test/basic/index.html
+++ b/core/src/components/datetime/test/basic/index.html
@@ -225,12 +225,17 @@
           <div class="grid-item">
             <h2>Inline - Custom</h2>
             <ion-datetime>
-              <span slot="title">My Custom Title</span>
+              <span slot="title">A really really really really really really really really really long label:</span>
               <ion-buttons slot="buttons">
                 <ion-button color="primary">Cancel</ion-button>
                 <ion-button color="primary">Ok</ion-button>
               </ion-buttons>
             </ion-datetime>
+
+            <form>
+              <label for="party">Enter a date and time for your party booking sdf sdf  sdf sdf sdfsdf:</label>
+              <input id="party" type="datetime-local" name="partydate">
+          </form>
           </div>
 
           <div class="grid-item">
