--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -1,15 +1,33 @@
 @import "./datetime.scss";
+@import "./datetime.md.vars.scss";
 @import "../../themes/ionic.globals.md";
 
 :host {
+  --background: var(--ion-color-step-100, #ffffff);
+  --background-secondary: #{current-color(base)};
+  --title-color: #{current-color(contrast)};
   width: 324px;
 }
 
 // Header
 // -----------------------------------
-:host .datetime-title {
-  width: 100%;
-  height: 124px;
+:host .datetime-header {
+  @include padding($datetime-md-header-padding, $datetime-md-header-padding, $datetime-md-header-padding, $datetime-md-header-padding);
+
+  background: var(--background-secondary);
+  color: var(--title-color);
+}
+
+:host .datetime-header .datetime-title {
+  font-size: 12px;
+
+  text-transform: uppercase;
+}
+
+:host .datetime-header .datetime-selected-date {
+  margin-top: 30px;
+
+  font-size: 35px;
 }
 
 // Calendar/Time
