--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -13,7 +13,7 @@
    * @prop --placeholder-color: Color of the datetime placeholder
    *
    * @prop --background: The primary background of the datetime component.
-   * @prop --backdrop-secondary: The secondary background of the datetime component. This is the background of the header in the date picker and the dial and inputs in the time picker.
+   * @prop --background-secondary: The secondary background of the datetime component. This is the background of the header in the date picker and the dial and inputs in the time picker.
    * @prop --background-active: The background of the active interactive components. This is the selected date in the date picker. In the time picker this is the active input and active AM/PM button.
    * @prop --title-color: The text color of the title.
    * @prop --color: The primary body text color.
@@ -26,23 +26,14 @@
   display: block;
 
   background: var(--background);
+}
 
-  //@include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
-
-  /*display: flex;
-  position: relative;
-
-  min-width: $datetime-min-width;
-  min-height: $datetime-min-height;
-
-  font-family: $font-family-base;
-
+:host .datetime-header .datetime-title {
   text-overflow: ellipsis;
 
   white-space: nowrap;
 
   overflow: hidden;
-  z-index: $z-index-item-input;*/
 }
 
 :host(.in-item) {
