--- a/core/src/components/datetime/test/basic/index.html
+++ b/core/src/components/datetime/test/basic/index.html
@@ -25,12 +25,11 @@
         margin-top: 10px;
         margin-left: 5px;
       }
-
-      ion-datetime.md {
-        border-radius: 4px;
-
-        overflow: hidden;
-        box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 8px 16px rgba(0, 0, 0, 0.25);
+      @media screen and (max-width: 800px) {
+        .grid {
+          grid-template-columns: 1fr;
+          padding: 0;
+        }
       }
 
       /*
@@ -222,7 +221,7 @@
 
           <div class="grid-item">
             <h2>Modal</h2>
-            TBD
+            <ion-button onclick="presentModal()">Present Modal</ion-button>
           </div>
 
           <div class="grid-item">
@@ -285,6 +284,29 @@
           }
 
           popover.addEventListener('didDismiss', dismiss);
+        }
+
+        const presentModal = async () => {
+          const modal = await createModal();
+
+          await modal.present();
+        }
+
+        const createModal = () => {
+          // create component to open
+          const element = document.createElement('div');
+          element.innerHTML = `
+            <ion-datetime>
+              <span slot="title">Select Date</span>
+            </ion-datetime>
+          `;
+
+          // present the modal
+          const modalElement = Object.assign(document.createElement('ion-modal'), {
+            component: element
+          });
+          document.body.appendChild(modalElement);
+          return modalElement;
         }
       </script>
     </ion-app>
