--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -10,26 +10,41 @@
     <script src="../../../../../scripts/testing/scripts.js"></script>
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
     <style>
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(250px, 1fr));
-        grid-row-gap: 20px;
-        grid-column-gap: 20px;
-      }
-      h2 {
-        font-size: 12px;
-        font-weight: normal;
+      ion-datetime {
+        position: fixed;
 
-        color: #6f7378;
+        margin: 0 auto;
 
-        margin-top: 10px;
-        margin-left: 5px;
+        top: 50%;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        transform: translateY(-50%);
+
+        overflow: hidden;
+
       }
-      @media screen and (max-width: 800px) {
-        .grid {
-          grid-template-columns: 1fr;
-          padding: 0;
-        }
+
+      ion-datetime.md {
+        height: 535px;
+
+        border-radius: 4px;
+
+        box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 8px 16px rgba(0, 0, 0, 0.25);
+      }
+
+      ion-content.ios {
+        --background: linear-gradient(45deg, rgba(241,87,122,1) 0%, rgba(241,165,128,1) 50%, rgba(5,131,238,1) 100%);
+      }
+
+      ion-content.md {
+        --background: rgba(0, 0, 0, 0.2);
+      }
+
+      ion-datetime.ios {
+        height: 316px;
+
+        border-radius: 12px;
       }
 
       /*
@@ -193,122 +208,30 @@
   </head>
   <body>
     <ion-app>
-      <ion-header translucent="true">
-        <ion-toolbar>
-          <ion-title>Datetime - Basic</ion-title>
-          <ion-buttons slot="end">
-            <ion-item lines="none">
-              <ion-label>Dark Mode</ion-label>
-              <ion-checkbox slot="end"></ion-checkbox>
-            </ion-item>
+      <ion-content>
+        <ion-item lines="none">
+          <ion-label>Dark Mode</ion-label>
+          <ion-checkbox slot="end"></ion-checkbox>
+        </ion-item>
+
+        <ion-datetime>
+          <span slot="title">Select Date</span>
+          <ion-buttons slot="buttons">
+            <ion-button color="primary">Cancel</ion-button>
+            <ion-button color="primary">Ok</ion-button>
           </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <div class="grid">
-          <div class="grid-item">
-            <h2>Inline</h2>
-            <ion-datetime></ion-datetime>
-          </div>
-
-          <div class="grid-item">
-            <h2>Popover</h2>
-            <ion-button onclick="presentPopover(defaultPopover, event)">Present Popover</ion-button>
-            <ion-popover id="default-popover">
-              <ion-datetime></ion-datetime>
-            </ion-popover>
-          </div>
-
-          <div class="grid-item">
-            <h2>Modal</h2>
-            <ion-button onclick="presentModal()">Present Modal</ion-button>
-          </div>
-
-          <div class="grid-item">
-            <h2>Inline - Custom</h2>
-            <ion-datetime color="danger">
-              <span slot="title">Select Date</span>
-              <ion-buttons slot="buttons">
-                <ion-button color="primary">Cancel</ion-button>
-                <ion-button color="primary">Ok</ion-button>
-              </ion-buttons>
-            </ion-datetime>
-
-            <form>
-              <label for="party">Enter a date and time for your party booking sdf sdf  sdf sdf sdfsdf:</label>
-              <input id="party" type="datetime-local" name="partydate">
-          </form>
-          </div>
-
-          <div class="grid-item">
-            <h2>Popover - Custom</h2>
-            <ion-button onclick="presentPopover(customPopover, event)">Present Popover</ion-button>
-            <ion-popover id="custom-popover">
-              <ion-datetime>
-                <span slot="title">My Custom Title</span>
-                <ion-buttons slot="buttons">
-                  <ion-button color="danger">Destroy</ion-button>
-                  <ion-button color="primary">Confirm</ion-button>
-                </ion-buttons>
-              </ion-datetime>
-            </ion-popover>
-          </div>
-
-          <div class="grid-item">
-            <h2>Modal - Custom</h2>
-            TBD
-          </div>
-        </div>
+        </ion-datetime>
       </ion-content>
-      <script>
-        const darkModeCheckbox = document.querySelector('ion-checkbox');
-        darkModeCheckbox.addEventListener('ionChange', (ev) => {
-          if (ev.detail.checked) {
-            document.body.classList.add('dark');
-          } else {
-            document.body.classList.remove('dark');
-          }
-        });
-        const defaultPopover = document.querySelector('ion-popover#default-popover');
-        const customPopover = document.querySelector('ion-popover#custom-popover');
-        const presentPopover = (popover, ev) => {
-          popover.event = ev;
-          popover.showBackdrop = false;
-          popover.isOpen = true;
-
-          const dismiss = () => {
-            popover.isOpen = false;
-            popover.event = undefined;
-
-            popover.removeEventListener('didDismiss', dismiss);
-          }
-
-          popover.addEventListener('didDismiss', dismiss);
-        }
-
-        const presentModal = async () => {
-          const modal = await createModal();
-
-          await modal.present();
-        }
-
-        const createModal = () => {
-          // create component to open
-          const element = document.createElement('div');
-          element.innerHTML = `
-            <ion-datetime>
-              <span slot="title">Select Date</span>
-            </ion-datetime>
-          `;
-
-          // present the modal
-          const modalElement = Object.assign(document.createElement('ion-modal'), {
-            component: element
-          });
-          document.body.appendChild(modalElement);
-          return modalElement;
-        }
-      </script>
     </ion-app>
+    <script>
+      const darkModeCheckbox = document.querySelector('ion-checkbox');
+      darkModeCheckbox.addEventListener('ionChange', (ev) => {
+        if (ev.detail.checked) {
+          document.body.classList.add('dark');
+        } else {
+          document.body.classList.remove('dark');
+        }
+      });
+    </script>
   </body>
 </html>
