--- a/core/src/components/datetime/test/basic/index.html
+++ b/core/src/components/datetime/test/basic/index.html
@@ -296,7 +296,7 @@
           // create component to open
           const element = document.createElement('div');
           element.innerHTML = `
-            <ion-datetime>
+            <ion-datetime color="danger">
               <span slot="title">Select Date</span>
             </ion-datetime>
           `;
