--- a/core/src/components/datetime/datetime.ios.vars.scss
+++ b/core/src/components/datetime/datetime.ios.vars.scss
@@ -4,8 +4,5 @@
 /// @prop - Border color for dividers between header and footer
 $datetime-ios-border-color:         0.55px solid $background-color-step-200 !default;
 
-/// @prop - Padding for content in footer
-$datetime-ios-footer-padding:       6px !default;
-
-/// @prop - Padding for content in header
-$datetime-ios-header-padding:       12px !default;
+/// @prop - Padding for content
+$datetime-ios-padding:       16px !default;
