--- a/core/src/components/datetime/test/demo/index.html
+++ b/core/src/components/datetime/test/demo/index.html
@@ -220,6 +220,11 @@
           <ion-item lines="none" detail="true" href="?ionic:mode=md">
             <ion-label>MD Mode</ion-label>
           </ion-item>
+
+          <ion-item lines="none"">
+            <ion-label>Locale</ion-label>
+            <ion-input placeholder="default" id="locale"></ion-input>
+          </ion-item>
         </div>
 
         <ion-datetime>
@@ -232,6 +237,12 @@
       </ion-content>
     </ion-app>
     <script>
+      const locale = document.querySelector('#locale');
+      const datetime = document.querySelector('ion-datetime');
+      locale.addEventListener('ionBlur', (ev) => {
+        const value = ev.target.value;
+        datetime.locale = (!!value) ? value : 'default';
+      })
       const darkModeCheckbox = document.querySelector('ion-checkbox');
       darkModeCheckbox.addEventListener('ionChange', (ev) => {
         if (ev.detail.checked) {
