--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -35,7 +35,6 @@
 :host .datetime-calendar,
 :host .datetime-time {
   width: 100%;
-  height: 328px;
 }
 
 // Calendar / Header / Action Buttons
@@ -57,6 +56,12 @@
   font-size: 13px;
 
   line-height: 36px;
+}
+
+// Calendar / Body
+// -----------------------------------
+:host .calendar-body .calendar-month {
+  font-size: 13px;
 }
 
 // Footer
