--- a/core/src/components/skeleton-text/skeleton-text.scss
+++ b/core/src/components/skeleton-text/skeleton-text.scss
@@ -46,23 +46,29 @@ span {
 
 :host(.skeleton-text-animated) {
   position: relative;
+
   overflow: hidden;
 
   &::after {
     position: absolute;
+    /* stylelint-disable property-blacklist */
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    /* stylelint-enable property-blacklist */
+
     transform: translateX(-100%);
+
     background: linear-gradient(
       to right,
       $skeleton-text-background 8%,
       $skeleton-text-background-animated 18%,
       $skeleton-text-background 33%
     );
-    animation: shimmer 1s infinite;
+
     content: "";
+    animation: shimmer 1s infinite;
   }
 }
 
